# PYMORT

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PROJECT_SPECIFICATION.md  README.md  README_cli.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Data/: data_france.xlsx  ~$data_france.xlsx
configs/: hedge-pipeline.yaml  pricing-pipeline.yaml  sensitivity-specs.yaml
outputs/: report_metrics.json  sensitivities.json
outputs/hedge/: weights.json
outputs/pricing-pipeline/: prices.csv
project_report/: project_report.aux  project_report.bbl  project_report.bcf  project_report.blg  project_report.fdb_latexmk  project_report.fls  project_report.out  project_report.run.xml  project_report.tex  project_report.toc  references.bib
src/pymort/: __init__.py  cli.py  errors.txt  lifetables.py  pipeline.py  utils.py
src/pymort/analysis/: __init__.py  bootstrap.py  fitting.py  projections.py  reporting.py  risk_tools.py  scenario.py  scenario_analysis.py  sensitivities.py  smoothing.py  validation.py
src/pymort/interest_rates/: __init__.py  hull_white.py
src/pymort/models/: __init__.py  apc_m3.py  cbd.py  cbd_m5.py  cbd_m6.py  cbd_m7.py  gompertz.py  lc.py  lc_m1.py  lc_m2.py  utils.py
src/pymort/pricing/: hedging.py  liabilities.py  longevity_bonds.py  mortality_derivatives.py  risk_neutral.py  survivor_swaps.py  utils.py
src/pymort/visualization/: __init__.py  animation.py  fans.py  lexis.py
streamlit_app/: App.py  README.md
streamlit_app/.streamlit/: config.toml
streamlit_app/assets/: logo.py  sidebar.py
streamlit_app/pages/: 10_Report_Export.py  1_Data_Upload.py  2_Data_Slicing.py  3_Fit_Select.py  4_Projection_P.py  5_Risk_Neutral_Q.py  6_Pricing.py  7_Hedging.py  8_Scenario_Analysis.py  9_Sensitivities.py
tests/: test_analysis_core.py  test_apc_m3.py  test_cbd_m5.py  test_cbd_m7.py  test_cli_more_commands.py  test_cli_smoke_cli.py  test_fitting.py  test_gompertz.py  test_hedging.py  test_lc_m1.py  test_lc_m2.py  test_lifetables.py  test_lightweight_shapes.py  test_mortality_derivatives.py  test_pipeline_more.py  test_pipelines_smoke.py  test_pricing_invariants.py  test_pricing_utils_and_liabilities.py  test_projections_reporting_bootstrap.py  test_reporting.py  test_risk_neutral_calibration.py  test_scenario_and_validation.py  test_scenarios_io_and_invariants.py  test_sensitivities.py  test_serialization_new_objects.py  test_smoke.py  test_smoothing_cpsplines.py  test_survivor_swaps.py  test_visualization_non_graphical.py  tests.py
validation_against_StMoMo/: stmomo_fit_cbd.R  stmomo_fit_lc.R  validate_vs_stmomo.py
validation_against_StMoMo/outputs/: cbd_data_summary.json  cbd_fitted_logitq.csv  cbd_kappas.csv  lc_data_summary.json  lc_fitted_logm.csv  lc_kt.csv  lc_params.csv
