[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymort"
version = "0.1.0"
description = "Longevity bond pricing and mortality modeling toolkit"
authors = [{name = "Pierre-Antoine Le Quellec", email = "pierre-antoine.lequellec@unil.ch"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.6",
    "pandas-stubs>=2.1.4.240218",
    "types-setuptools>=69.0",
    "types-PyYAML>=6.0",
    "build>=1.1",
    "twine>=5.0",
    "cpsplines @ git+https://github.com/ManuelNavarroGarcia/cpsplines.git@89c3cf8",
]

[project.scripts]
pymort = "pymort.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pymort = ["py.typed"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TID", "RET", "PTH", "ERA", "PL", "RUF", "D"]
ignore = ["D100", "D101", "D102", "D104", "D105", "D107", "PLR0913", "PLR2004", "PLC0415", "RUF001", "RUF002"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101", "ARG"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pymort"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
namespace_packages = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = ["hypothesis.*", "typer.*", "numpy.*", "scipy.*", "statsmodels.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=pymort",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-n=auto",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/pymort"]
branch = true
parallel = true
omit = ["*/tests/*", "*/__init__.py", "*/visualization/*", "src/pymort/visualization/*", "src/pymort/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
    "@overload",
]
precision = 2
show_missing = true
